@@ -1,25 +1,26 @@
-package de.thi.cnd.adapter.jpa;
+package de.thi.cnd.adapter.outgoing.jpa;
 
-import de.thi.cnd.adapter.jpa.entities.IngredientEntity;
+import de.thi.cnd.adapter.outgoing.jpa.entities.IngredientEntity;
 import de.thi.cnd.domain.model.Ingredient;
-import de.thi.cnd.ports.outgoing.IngredientOutputPort;
-import org.springframework.beans.factory.annotation.Autowired;
+import de.thi.cnd.ports.outgoing.IngredientRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
-public class IngredientJpaAdapter implements IngredientOutputPort {
+public class IngredientRepositoryImpl implements IngredientRepository {
 
-    @Autowired
-    IngredientRepository ingredientRepository;
+    private final JpaIngredientRepository jpaIngredientRepository;
+
+    public IngredientRepositoryImpl(JpaIngredientRepository jpaIngredientRepository) {
+        this.jpaIngredientRepository = jpaIngredientRepository;
+    }
 
     @Override
     public Ingredient saveIngredient(Ingredient ingredient) {
-        if (ingredientRepository.findByName(ingredient.getName()).isPresent()) {
+        if (jpaIngredientRepository.findByName(ingredient.getName()).isPresent()) {
             throw new IllegalArgumentException("Ingredient with name " + ingredient.getName() + " already exists");
         }
 
@@ -28,14 +29,14 @@ public class IngredientJpaAdapter implements IngredientOutputPort {
         i.setUnit(ingredient.getUnit());
         i.setTags(formatTags(ingredient.getTags()));
 
-        ingredientRepository.save(i);
+        jpaIngredientRepository.save(i);
 
         return i.toIngredient();
     }
 
     @Override
     public List<Ingredient> getIngredients() {
-        Iterable<IngredientEntity> all = ingredientRepository.findAll();
+        List<IngredientEntity> all = jpaIngredientRepository.findAll();
         List<Ingredient> ingredients = new ArrayList<>();
         all.forEach(el -> ingredients.add(el.toIngredient()));
         return ingredients;
@@ -43,47 +44,47 @@ public class IngredientJpaAdapter implements IngredientOutputPort {
 
     @Override
     public Optional<Ingredient> getIngredientById(Long id) {
-        Optional<IngredientEntity> ingredientEntity = ingredientRepository.findById(id);
+        Optional<IngredientEntity> ingredientEntity = jpaIngredientRepository.findById(id);
         return ingredientEntity.map(IngredientEntity::toIngredient);
     }
 
     @Override
     public Optional<Ingredient> getIngredientByName(String name) {
-        Optional<IngredientEntity> ingredientEntity = ingredientRepository.findByName(name);
+        Optional<IngredientEntity> ingredientEntity = jpaIngredientRepository.findByName(name);
         return ingredientEntity.map(IngredientEntity::toIngredient);
     }
 
     @Override
     public Optional<Ingredient> updateIngredient(Long ingredientId, String name, String unit, List<String> tags) {
-        Optional<IngredientEntity> ingredientEntity = ingredientRepository.findById(ingredientId);
+        Optional<IngredientEntity> ingredientEntity = jpaIngredientRepository.findById(ingredientId);
         if (ingredientEntity.isEmpty()) {
-            throw new IllegalArgumentException("Ingredient with id " + ingredientId + " not found");
+            return Optional.empty();
         }
         IngredientEntity i = ingredientEntity.get();
         i.setName(name);
         i.setUnit(unit);
         i.setTags(formatTags(tags));
-        ingredientRepository.save(i);
+        jpaIngredientRepository.save(i);
         return Optional.of(i.toIngredient());
     }
 
     @Override
     public void deleteIngredient(Long id) {
-        Optional<IngredientEntity> ingredientEntity = ingredientRepository.findById(id);
+        Optional<IngredientEntity> ingredientEntity = jpaIngredientRepository.findById(id);
         if (ingredientEntity.isEmpty()) {
             throw new IllegalArgumentException("Ingredient with id " + id + " not found");
         }
-        ingredientRepository.deleteById(id);
+        jpaIngredientRepository.deleteById(id);
     }
 
     @Override
     public List<String> getTags() {
-        return ingredientRepository.findAllTags();
+        return jpaIngredientRepository.findAllTags();
     }
 
     @Override
     public List<Ingredient> getIngredientsByTag(String tag) {
-        Iterable<IngredientEntity> all = ingredientRepository.findByTag(tag);
+        Iterable<IngredientEntity> all = jpaIngredientRepository.findByTag(tag);
         List<Ingredient> ingredients = new ArrayList<>();
         all.forEach(el -> ingredients.add(el.toIngredient()));
         return ingredients;
@@ -92,7 +93,7 @@ public class IngredientJpaAdapter implements IngredientOutputPort {
     private List<String> formatTags(List<String> tags) {
         return tags != null ? new ArrayList<>(tags.stream()
                 .map(String::toLowerCase)
-                .collect(Collectors.toList())) : new ArrayList<>();
+                .toList()) : new ArrayList<>();
     }
 
 
